      registerClass is capable of registering icons.

    - DublinCore and PortalFolder: Changed fallback in 'Type' method.
      The fallback is only necessary if the related type info is missing.

    - CMFCore.PortalContent: Wrong variable name in __call__ would blow up
      if no default view could be found for a piece of content.

  Others

    - CMFCore and GenericSetup: Moved mechanisms for content export / import
      to GenericSetup/content.py, and made more generic.

    - CMFDefault: Removed PortalGenerator and manage_addCMFSite.

    - Portal Types: Removed factory_type_information data.
      TypesTool.listDefaultTypeInformation was removed, the 'fti' argument of
      utils.ContentInit and the 'typeinfo_name' argument of
      TypesTool.manage_addTypeInformation are ignored.

    - CatalogTool: A new portal_catalog is now empty.
      Removed enumerateIndexes, enumerateLexicons, enumerateColumns and
      _initIndexes. Please use the setup tool to populate the catalog.

    - CMFActionIcons, CMFCalendar and CMFTopic: Removed old install scripts.

    - Refactored and extended CMFDefault.tests.test_join so it can be easily 
      subclassed and reused for alternative membership implementations. All
      that is needed is to ovverride _createPortal to return a portal with
      the desired non-default membership-related tools installed.

    - Remove all "old-style" actions from tools that still carried them 
      (CMFDefault.MembershipTool, CMFDefault.PropertiesTool, 
      CMFDefault.RegistrationTool, CMFDefault.SyndicationTool,
      CMFDefault.DiscussionTool, CMFCore.UndoTool). These have been
      superceded by "new-style" action information objects stored inside
      the Actions Tool.

    - Some simplifications to the slurp_release release helper script and
      updates to the RELEASE.txt release instructions.

    - The CMF now depends on Zope 2.8.1 including Five.

    - Non-release packages moved out of the /CMF/ repository package:
